[tool.poetry]
name = "stats"
version = "0.1.0"
description = ""
authors = ["ezhang7423 <ezhang7423@student.palomar.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
